<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:text="@string/gutenberg_project"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"
                app:fontFamily="@font/montserrat_semi_bold" />
            <!--A social cataloging website that allows you to
    freely search its database of books,
    annotations, and reviews.-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/a_social_cataloging"
                android:textColor="@color/grayDrak"
                android:textSize="@dimen/t16sp"
                app:fontFamily="@font/montserrat_semi_bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ficition"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_fiction" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/fiction"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_drama"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_drama" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/drama"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_humor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_humour" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/humor"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_politics"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_politics" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/politics"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_philosophy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_philosophy" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/philosophy"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_history"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_history" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/history"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_adventure"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_adventure" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:text="@string/adventure"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/t16sp"
                        app:fontFamily="@font/montserrat_semi_bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="@dimen/dp30"
                            app:srcCompat="@drawable/ic_next" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</layout>